ncc/testsuite/negative/where-constraints2.n
namespace Bug1048 {
using System;

class RefTypeA {}
class RefTypeB {}

struct StructType {}

class Test4[T1] where T1 : class, StructType {} // E: the type .* must be a reference type in order to use it as type parameter

}
